fixed spacing between skills and contact for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ section {
 }
 
 section h2 {
-  padding-top: 17%;
+  padding-top: 8%;
   font-size: 3.5vw;
   color: black;
   /* text-transform: capitalize; */
@@ -161,8 +161,8 @@ section h2 {
   height: 40vh;
   color: rgb(0, 0, 141);
   border: 0.5px solid rgba(200, 78, 249, 0.274);
-  background-color: rgb(181, 240, 255);
-  border-radius: 7px;
+  background-color: rgb(201, 244, 255);
+  border-radius: 15px;
   vertical-align: middle;
 }
 
@@ -299,6 +299,11 @@ section h2 {
     padding: 20px;
   }
 
+  .single-skill-div * {
+    font-size: 2.5vw;
+    margin: 5px;
+  }
+
   #contact-me * {
     padding-top: 10px;
   }
@@ -315,6 +320,17 @@ section h2 {
 
   .navbar li {
     padding: 2px;
+  }
+
+  .single-skill-div * {
+    font-size: 4vw;
+    margin: 1px;
+    padding: 1px;
+  }
+
+  #contact-me {
+    /* height: 80vh; */
+    padding: 300px 0px;
   }
 }
 
